kube/deploy_ordermanagement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordermanagementv1
  labels:
    app: ordermanagement
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ordermanagement
  template:
    metadata:
      labels:
        app: ordermanagement
    spec:
      containers:
        - name: ordermanagementdemo
          image: kimzey/order-management:v1.0.3
          ports:
            - containerPort: 8080
