kube/service_ordermanagement.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordermanagement
  labels:
    app: ordermanagement
spec:
  selector:
    app: ordermanagement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
