kube/service_postgret.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
